Changing My Contact Details

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <h3>Address :  Vidyaranyapuram. Mysore</h3>
-    <h3>Mobile No. :  8123512259</h3>
+    <h3>Address : Mysore. Karnataka</h3>
+    <h3>Mobile No. :  000-0000-000</h3>
     <h3>Email Address :<a href="mailto:pooja.ramesh331@gmail.com?subject=feedback">email me</a></h3>
     <hr>
     <form action="mailto:pooja.ramesh331@gmail.com" method="post" enctype="text/plain">
